# rusty

./: Cargo.toml  proxy_logs.db  proxy_logs.db-shm  proxy_logs.db-wal  query_log.csv
api/: Cargo.toml
api/src/: cli.rs  main.rs  state.rs
api/src/background/: function_sync.rs  mod.rs
api/src/routes/: history.rs  live.rs  mod.rs
api/src/services/: function_cache.rs  mod.rs
api/static/: dashboard.html  index.html
data/: query_logs.db  query_logs.db-shm  query_logs.db-wal
data/live.rocksdb/: 000008.sst  000009.sst  000014.sst  000015.sst  IDENTITY  LOG  LOG.old.1765890232187527  LOG.old.1765908159643488  LOG.old.1765908162917290  MANIFEST-000021  OPTIONS-000023
proxy/: Cargo.toml
proxy/src/: cli.rs  main.rs
proxy/src/monitoring/: logger.rs  mod.rs
proxy/src/protocol/: messages.rs  mod.rs  types.rs
proxy/src/proxy/: handler.rs  mod.rs  parser.rs
shared/: Cargo.toml
shared/src/: lib.rs  schema.rs  types.rs
shared/src/storage/: error.rs  mod.rs  rocksdb_store.rs
src/: cli.rs  dashboard.html  lib.rs  main.rs
src/database/: mod.rs  queries.rs  schema.rs
src/monitoring/: active_queries.rs  http_server.rs  logger.rs  mod.rs
src/protocol/: messages.rs  mod.rs  types.rs
src/proxy/: handler.rs  mod.rs  parser.rs
