[package]
name = "pg_rusty_proxy"
version = "0.0.2"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }

anyhow = "1"
clap = { version = "4", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

postgres-protocol = "0.6"
bytes = "1"
fallible-iterator = "0.2.0"

chrono = "0.4"

axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


lazy_static = "1.4"

rusqlite = { version = "0.32", features = ["bundled"] }
tokio-rusqlite = "0.6"

# UUID для глобально уникальных query_id
uuid = { version = "1.10", features = ["v7", "serde"] }