[workspace]
members = [
    "shared",
    "proxy",
    "api",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"
authors = ["Ilya Rozhnev ilya.rozhnev@tantorlabs.ru>"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Tracing & logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Database - PostgreSQL
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
postgres-protocol = "0.6"
postgres-types = { version = "0.2", features = ["derive"] }
deadpool-postgres = "0.12"

# Database - SQLite
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-rusqlite = "0.6"

# Database - RocksDB
rocksdb = { version = "0.22", default-features = false, features = ["snappy"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Utilities
anyhow = "1"
lazy_static = "1.4"
uuid = { version = "1.10", features = ["v7", "serde"] }
bytes = "1"
chrono = "0.4"
thiserror = "1.0"

#CLI
clap = { version = "4", features = ["derive"] }


# Parsing
fallible-iterator = "0.2.0"

# Networking
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }


# Cache & concurrency
lru = "0.12"
parking_lot = "0.12"
crossbeam = "0.8"

# Crypto (for hashing)
blake3 = "1.5"
