[package]
name = "pg-rusty-proxy-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "pg-proxy-api"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
pg-rusty-proxy-shared = { path = "../shared" }

# Async runtime
tokio = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
rocksdb = { workspace = true }
tokio-rusqlite = { workspace = true }
rusqlite = { workspace = true }
deadpool-postgres = { workspace = true }
tokio-postgres = { workspace = true }
postgres-types = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["fs", "trace", "cors"] }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# CLI
clap = { workspace = true }

# Cache & concurrency
lru = { workspace = true }
parking_lot = { workspace = true }


