[package]
name = "pg-rusty-proxy-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Storage
rocksdb = { workspace = true }
rusqlite = { workspace = true }

# Utilities
bytes = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Tracing
tracing = { workspace = true }

# Crypto
blake3 = { workspace = true }

# Concurrency
parking_lot = { workspace = true }
crossbeam = { workspace = true }
